--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.security.user.name=user
-spring.security.user.password=password
-
+server.port=8090
 spring.datasource.username=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.password=4temoi@
