--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8090
 spring.datasource.username=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.password=4temoi@
+spring.datasource.password=$aoLuis411
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
